<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_feetech_r2c_dynamics_limits</name>
  <version>0.0.0</version>

  <description>TODO: Package description</description>
  <maintainer email="t.poignonec@asterion-robotics.com">Thibault Poignonec</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- ROS2 control -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>parallel_gripper_action_controller</exec_depend>

  <!-- Feetech HW -->
  <exec_depend>feetech_ros2_driver</exec_depend>

  <!-- SO ARM 101 description -->
  <exec_depend>so101_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>